# Client

./: command (copy)
Ass3Client/: CMakeLists.txt
Ass3Client/Boost_Echo_Client/include/: Task.h  Writer.h  connectionHandler.h
Ass3Client/Boost_Echo_Client/src/: Client.cpp  EncoderDecoder.cpp  Reader.cpp  Reader.h  Task.cpp  Writer.cpp  connectionHandler.cpp  echoClient.cpp  main.cpp  main.h
Client/: CMakeLists (copy).txt  CMakeLists.txt  makefile
Client/include/: Client.h  Reader.h  Sstring.h  connectionHandler.h
Client/src/: Client.cpp  Reader.cpp  Sstring.cpp  connectionHandler.cpp
Server/src/main/java/bgu/spl/net/api/: Course.java  IntegerMessage.java  Protocol.java  StringsMessage.java  User.java
Server/src/main/java/bgu/spl/net/impl/BGRSServer/: TPCMain.java
Server/src/main/java/bgu/spl/net/srv/: Database.java
